--- a/sass/_connection.scss
+++ b/sass/_connection.scss
@@ -18,13 +18,6 @@ img {
   max-width: 100%;
 }
 
-// %link-base {
-//   font: normal 16px Arial, sans-serif;
-//   color: #007ece;
-//   text-decoration: none;
-//   &:hover {
-//     color: #000;
-// }
 
 // end
 
@@ -40,6 +33,73 @@ img {
 }
 
 .breadcrumb {
+  width: 100%;
+}
+
+.breadcrumb__list {
   margin: 0;
+  padding: 0;
+  padding-top: 33px;
+  padding-bottom: 14px;
   list-style: none;
+}
+
+.breadcrumb__item {
+  display: inline-block;
+  font: normal 13px/1 Arial, sans-serif;
+}
+
+.breadcrumb__item:not(.breadcrumb__item--last):after {
+    content: '>';
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.breadcrumb__link {
+  display: inline;
+  margin-right: 5px;
+  font: normal 13px Arial, sans-serif;
+  color: #007ece;
+  text-decoration: none;
+
+  &:hover {
+    color: #000;
+  }
+
+  &--active {
+    color: #666666;
+    pointer-events: none;
+  }
+}
+
+
+.page-techer__title {
+  width: 100%;
+  margin: 0;
+  margin-top: 24px;
+  padding: 0;
+  font: normal 25px "GetVoIP Grotesque", sans-serif;
+  text-transform: uppercase;
+}
+
+
+.documents {
+  width: 100%;
+  margin-top: 30px;
+  padding: 30px 0;
+  background: #ffffff;
+}
+
+.documents__link {
+  display: inline-block;
+  width: 300px;
+  margin: 0;
+  margin-right: 20px;
+  font: normal 13px/1 Arial, sans-serif;
+  color: #000000;
+  text-decoration: none;
+
+  &:hover {
+    color: #F86005;
+  }
 }
