--- a/sass/_connection.scss
+++ b/sass/_connection.scss
@@ -1,4 +1,4 @@
-// === общие стили ===/
+/* === общие стили === */
 
 html {
   box-sizing: border-box;
@@ -18,10 +18,17 @@ img {
   max-width: 100%;
 }
 
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 
 // end
 
 .page-techer {
+  padding-bottom: 105px;
   background-color: #eaeaea;
 }
 
@@ -85,7 +92,7 @@ img {
 
 .documents {
   width: 100%;
-  margin-top: 30px;
+  margin: 30px 0;
   padding: 30px 0;
   background: #ffffff;
 }
@@ -102,4 +109,180 @@ img {
   &:hover {
     color: #F86005;
   }
+}
+
+.filter {
+  float: left;
+  width: 200px;
+  margin-right: 30px;
+  padding: 17px 11px 23px;
+  background: #ffffff;
+}
+
+.filter__form {
+  margin: 0;
+  padding: 0;
+}
+
+.filter__list {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  list-style: none;
+}
+
+.filter__item input,
+.filter__item select {
+  width: 100%;
+  padding: 7px 9px;
+  font: normal 13px/1 Arial, sans-serif;
+  border: 1px solid #c3c3c3;
+
+  &:hover {
+    border-color: #F86005;
+  }
+
+  &:focus {
+    border-color: #000000;
+  }
+}
+
+.filter__item label {
+  display: block;
+  margin-top: 19px;
+  margin-bottom: 5px;
+  font: normal 13px/1 Arial, sans-serif;
+  color: #000000;
+}
+
+.filter__item:first-child label {
+  margin-top: 0;
+}
+
+.filter__item-select--arrow {
+  background-image: ("../img/select.png");
+  background-repeat: no-repeat;
+}
+
+.filter__btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 17px;
+  padding: 0;
+  font: normal 13px/1 Arial, sans-serif;
+  color: #007ece;
+  background: none;
+  border: none;
+
+  &:hover {
+    color: #000000;
+  }
+
+}
+
+.content {
+  float: left;
+  width: 730px;
+  margin: 0;
+  padding: 0;
+  background: #ffffff;
+}
+
+.content__catalog {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.teacher {
+  display: block;
+  width: 100%;
+  padding: 18px 19px 15px;
+  border: 1px solid #eaeaea;
+}
+
+.teacher__foto {
+  float: left;
+  width: 131px;
+  margin-right: 35px;
+
+  img {
+  border-radius: 50%;
+  }
+}
+
+.teacher__info {
+  float: right;
+  width: 495px;
+}
+
+.teacher__name {
+  width: 100%;
+  margin: 0;
+  font: bold 18px/1 Arial, sans-serif;
+  color: #000000;
+}
+
+.teacher__adress {
+  margin: 0;
+  margin-top: 5px;
+  font: normal 13px/1 Arial, sans-serif;
+  color: #909090;
+}
+
+.teacher__email {
+  position: relative;
+  margin: 0;
+  margin-left: 22px;
+  padding-right: 20px;
+  background-image: url("../img/tooltip.png");
+  background-repeat: no-repeat;
+  background-position: 100% 0;
+  cursor: pointer;
+
+  &--opened {
+    margin-left: 20px;
+    padding-right: 0;
+    padding-left: 20px;
+    font: inherit;
+    color: inherit;
+    text-decoration: none;
+    background-image: url("../img/email.png");
+    background-repeat: no-repeat;
+    background-position: 0 5px;
+
+    &:hover {
+      color: #F86005;
+    }
+  }
+}
+
+.teacher__email--tooltip:hover::after {
+  content: attr(data-title);
+  position: absolute;
+  bottom: 20px;
+  left: -55px;
+  display: inline-block;
+  width: 275px;
+  padding: 16px 30px;
+  vertical-align: top;
+  font: normal 13px/1.5 Arial, sans-serif;
+  color: #000000;
+  background: #ffffff;
+  box-shadow: 0 0 20px 0px #c3c3c3;
+  z-index: 1;
+}
+
+.teacher__about {
+  width: 100%;
+  margin-top: 10px;
+  font: normal 13px/1.5 Arial, sans-serif;
+  color: #000000;
+  border-collapse: collapse;
+}
+
+.teacher__about-cell--bold {
+  width: 125px;
+  font-weight: bold;
+  vertical-align: top;
 }
