--- a/sass/_connection.scss
+++ b/sass/_connection.scss
@@ -34,7 +34,7 @@ img {
 
 .width {  //универсальная стандартная обертка для контейнеров
   max-width: 1000px;
-  min-width: 320px;
+  min-width: 280px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -212,7 +212,7 @@ img {
 }
 
 .teacher__info {
-  float: right;
+  float: left;
   width: 495px;
 }
 
@@ -226,7 +226,7 @@ img {
 .teacher__adress {
   margin: 0;
   margin-top: 5px;
-  font: normal 13px/1 Arial, sans-serif;
+  font: normal 13px/1.5 Arial, sans-serif;
   color: #909090;
 }
 
@@ -235,10 +235,7 @@ img {
   margin: 0;
   margin-left: 22px;
   padding-right: 20px;
-  background-image: url("../img/tooltip.png");
-  background-repeat: no-repeat;
-  background-position: 100% 0;
-  cursor: pointer;
+
 
   &--opened {
     margin-left: 20px;
@@ -257,20 +254,28 @@ img {
   }
 }
 
-.teacher__email--tooltip:hover::after {
-  content: attr(data-title);
-  position: absolute;
-  bottom: 20px;
-  left: -55px;
-  display: inline-block;
-  width: 275px;
-  padding: 16px 30px;
-  vertical-align: top;
-  font: normal 13px/1.5 Arial, sans-serif;
-  color: #000000;
-  background: #ffffff;
-  box-shadow: 0 0 20px 0px #c3c3c3;
-  z-index: 1;
+.teacher__email-tooltip {
+  margin-left: 5px;
+  background-image: url("../img/tooltip.png");
+  background-repeat: no-repeat;
+  background-position: 100% 0;
+  cursor: pointer;
+
+  &:hover::after {
+    content: attr(data-title);
+    position: absolute;
+    bottom: 20px;
+    left: -128px;
+    display: inline-block;
+    width: 275px;
+    padding: 16px 30px;
+    vertical-align: top;
+    font: normal 13px/1.5 Arial, sans-serif;
+    color: #000000;
+    background: #ffffff;
+    box-shadow: 0 0 20px 0px #c3c3c3;
+    z-index: 1;
+  }
 }
 
 .teacher__about {
@@ -285,4 +290,103 @@ img {
   width: 125px;
   font-weight: bold;
   vertical-align: top;
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1000px) {
+  .filter {
+    float: none;
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 30px;
+    padding: 11px;
+  }
+
+  .filter__list {
+    padding-left: 13%;
+  }
+
+  .filter__item {
+    float: left;
+    width: 50%;
+  }
+
+  .filter__item input,
+  .filter__item select {
+    width: 70%;
+  }
+
+  .filter__item label {
+    margin-top: 5px;
+  }
+
+  .filter__item:first-child label {
+      margin-top: 5px;
+    }
+
+    .content {
+      float: none;
+      width: 100%;
+    }
+
+  .teacher__foto {
+    float: left;
+    margin: 0;
+    margin-right: 25px;
+  }
+
+  .teacher__info {
+    width: 495px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .page-techer__title {
+    font-size: 22px;
+  }
+
+  .documents {
+    margin: 20px 0;
+    padding: 12px 0;
+  }
+
+  .documents__link {
+    width: 100%;
+    margin: 0;
+  }
+
+  .filter {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 30px;
+    padding: 11px;
+  }
+
+  .filter__item label {
+    margin-top: 5px;
+  }
+
+  .filter__item:first-child label {
+      margin-top: 5px;
+    }
+
+    .content {
+      width: 100%;
+    }
+
+    .teacher__foto {
+      float: none;
+      margin: 0 auto;
+      margin-bottom: 15px;
+    }
+
+    .teacher__info {
+      width: 100%;
+    }
+
+    .teacher__about,
+    .teacher__adress {
+      margin-top: 12px;
+    }
+
 }
